--- a/appendix-02-operators.html
+++ b/appendix-02-operators.html
@@ -292,7 +292,7 @@
 <tr><td><code>expr(expr, ...)</code></td><td>函式呼叫表達式，也用來初始化元組 <code>struct</code> 與元組 <code>enum</code> 變體</td></tr>
 <tr><td><code>expr.0</code>, <code>expr.1</code>, etc.</td><td>元組索引</td></tr>
 </tbody></table>
-<p>表 B-9 顯在大括號使用到的地方。</p>
+<p>表 B-9 顯示大括號使用到的地方。</p>
 <p><span class="caption">表 B-9：大括號</span></p>
 <table><thead><tr><th>符號</th><th>解釋</th></tr></thead><tbody>
 <tr><td><code>{...}</code></td><td>區塊表達式</td></tr>
