--- a/print.html
+++ b/print.html
@@ -6706,7 +6706,7 @@ impl&lt;T: Display + PartialOrd&gt; Pair&lt;T&gt; {
 <p>特徵與特徵界限讓我們能使用泛型型別參數來減少重複的程式碼的同時，告訴編譯器該泛型型別該擁有何種行為。編譯器可以利用特徵界限資訊來檢查程式碼提供的實際型別有沒有符合特定行為。在動態語言中，我們要是呼叫一個該型別沒有的方法的話，我們會在執行時才發生錯誤。但是 Rust 將此錯誤移到編譯期間，讓我們必須在程式能夠執行之前確保有修正此問題。除此之外，我們還不用寫在執行時檢查此行為的程式碼，因為我們已經在編譯時就檢查了。這麼做我們可以在不失去泛型彈性的情況下，提升效能。</p>
 <p>另一種我們已經看過的泛型為<strong>生命週期（lifetimes）</strong>。不同於確保一個型別有沒有我們要的行為，生命週期確保我們在需要引用的時候，它們都是有效的。讓我們來看看生命週期是怎麼做到的。</p>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="透過生命週期驗證引用"><a class="header" href="#透過生命週期驗證引用">透過生命週期驗證引用</a></h2>
-<p>我們在第四章的<a href="ch04-02-references-and-borrowing.html#%E5%BC%95%E7%94%A8%E8%88%87%E5%80%9F%E7%94%A8">「引用與借用」</a><!-- ignore -->段落沒談到的是，Rust 中的每個引用都有個<strong>生命週期（lifetime）</strong>，這是決定該引用是否有效的作用域。大多情況下生命週期是隱式且可推導出來得，就像大多情況下型別是可推導出來的。當多種型別都有可能時，我們就得詮釋型別。同樣地，當生命週期的引用能以不同方式關聯的話，我們就得詮釋生命週期。Rust 要求我們用泛型生命週期參數來詮釋引用之間的關係，以確保實際在執行時的引用絕對是有效的。</p>
+<p>我們在第四章的<a href="ch04-02-references-and-borrowing.html#%E5%BC%95%E7%94%A8%E8%88%87%E5%80%9F%E7%94%A8">「引用與借用」</a><!-- ignore -->段落沒談到的是，Rust 中的每個引用都有個<strong>生命週期（lifetime）</strong>，這是決定該引用是否有效的作用域。大多情況下生命週期是隱式且可推導出來的，就像大多情況下型別是可推導出來的。當多種型別都有可能時，我們就得詮釋型別。同樣地，當生命週期的引用能以不同方式關聯的話，我們就得詮釋生命週期。Rust 要求我們用泛型生命週期參數來詮釋引用之間的關係，以確保實際在執行時的引用絕對是有效的。</p>
 <p>生命週期的概念與其他程式語言有的工具都大相徑庭，這讓生命週期成為 Rust 最獨特的特色。雖然我們不會在此章涵蓋所有生命週期的內容，但是我們講些你可能遇到生命週期的常見場景，來讓你更加熟悉這個概念。</p>
 <h3 id="透過生命週期預防迷途引用"><a class="header" href="#透過生命週期預防迷途引用">透過生命週期預防迷途引用</a></h3>
 <p>生命週期最主要的目的就是要預防迷途引用（dangling references），其會導致程式引用到其他資料，而非它原本想要的引用。請看一下範例 10-17 的程式，它有一個外部作用域與內部作用域。</p>
