--- a/ch11-02-running-tests.html
+++ b/ch11-02-running-tests.html
@@ -152,7 +152,7 @@
 <p>有些命令列選項用於 <code>cargo test</code> 而有些則用於產生的測試二進制檔案。要分開這兩種引數，你可以先寫奧用於 <code>cargo test</code> 的引數然後加上 <code>--</code> 分隔線來區隔要用於測試二進制檔案的引數。執行 <code>cargo test --help</code> 可以顯示你能用在 <code>cargo test</code> 的選項，而執行 <code>cargo test -- --help</code> 在則會顯示你在 <code>--</code> 之後能用的選項。</p>
 <h3 id="平行或接續執行測試"><a class="header" href="#平行或接續執行測試">平行或接續執行測試</a></h3>
 <p>當你執行數個測試時，它們預設會使用執行緒（thread）來平行執行。這樣測試可以更快完成，讓你可以從你或其他人的程式碼更快獲得回饋。因為測試是同時一起執行的，請確保你的測試並不依賴其他測試或是共享的狀態。這包含共享環境，像是目前的工作目錄或是環境變數。</p>
-<p>舉例來說，假設你的每個測試都會執行些程式碼會在硬碟上產生一個檔案叫做 <em>test-output.txt</em> 並將一些資料寫入檔案中。然後每個測試讀取檔案中的資料，並判定該檔案有沒有包含特定的值，而這個值在每個測試都不相同。因為測試同時執行，其中的測試可以能覆蓋其他測試寫入與讀取的內容。這樣其他測試就會失敗，並不是因為程式碼不正確，而是因為平行執行時該測試會被其他測試所影響。其中一個解決辦法是確保每個測試都寫入不同的檔案，或者也可以選擇一次只執行一個測試。</p>
+<p>舉例來說，假設你的每個測試都會執行些程式碼會在硬碟上產生一個檔案叫做 <em>test-output.txt</em> 並將一些資料寫入檔案中。然後每個測試讀取檔案中的資料，並判定該檔案有沒有包含特定的值，而這個值在每個測試都不相同。因為測試同時執行，其中的測試可能覆蓋其他測試寫入與讀取的內容。這樣其他測試就會失敗，並不是因為程式碼不正確，而是因為平行執行時該測試會被其他測試所影響。其中一個解決辦法是確保每個測試都寫入不同的檔案，或者也可以選擇一次只執行一個測試。</p>
 <p>如果你不想平行執行測試，或者你想要能更加掌控使用的執行緒數量，你可以傳遞 <code>--test-threads</code> 的選項以及你希望在測試執行檔使用的執行緒數量。請看一下以下範例：</p>
 <pre><code class="language-console">$ cargo test -- --test-threads=1
 </code></pre>
