deploy: cffcf8086a64c5846b0acbe2208a8688a4447113

--- a/ch13-04-performance.html
+++ b/ch13-04-performance.html
@@ -148,7 +148,7 @@ test bench_search_iter ... bench:  19,234,900 ns/iter (+/- 657,200)
 <p>疊代器版本竟然比較快一些！我們在此不會解釋評測的程式碼，因為這裡的重點不再於證明這兩種版本是一樣快的，而是要理解這兩種實作對效能的影響。</p>
 <p>要做更全面的評測的話，你應該要檢查使用不同大小的不同文字來作為 <code>contents</code>、不同單字與不同長度來作為 <code>query</code>，以及所有各式各樣的可能性。這邊的重點在於：疊代器雖然是高階抽象，但其編譯出來的程式碼與你親自寫出低階的程式碼幾乎相同。疊代器是 Rust 其中一種<strong>零成本抽象</strong>（zero-cost abstractions），這指的是使用的抽象不會在執行時有額外的開銷。這是 C++ 的初始設計暨實作者 Bjarne Stroustrup 在 “Foundations of C++” (2012) 書中所定義的<strong>零開銷</strong>（zero-overhead）的概念：</p>
 <blockquote>
-<p>大致上來說，C++ 的實作遵守著零開銷的原則：你沒有使用到的話，你就不必買單。而且你有使用到的話，你不可能在寫出更好的程式碼。</p>
+<p>大致上來說，C++ 的實作遵守著零開銷的原則：你沒有使用到的話，你就不必買單。而且你有使用到的話，你不可能再寫出更好的程式碼。</p>
 </blockquote>
 <p>作為另一個例子，以下程式碼是音訊解碼器的其中一個段落。解碼演算碼使用線性預測數學運算，並依據之前樣本的線性函式來預估未來的數值。此程式碼使用一連串的疊代器來對作用域中的三個變數進行數學運算：資料切片 <code>buffer</code>、長度為 12 的 <code>coefficients</code> 陣列以及要偏移的數量 <code>qlp_shift</code>。我們在範例中宣告變數但沒有給予任何數值，雖然只看此程式碼的確沒有什麼意義，但是這仍然是個現實世界中的其中一個簡例，可以來看出 Rust 如何將高階的想法轉換成低階的程式碼。</p>
 <pre><code class="language-rust ignore">let buffer: &amp;mut [i32];
