deploy: 1febca54e46fca63a37b407e1f433e9a5d5a4d8b

--- a/ch15-01-box.html
+++ b/ch15-01-box.html
@@ -145,7 +145,7 @@
 <ul>
 <li>當你有個型別無法在編譯時期確定大小，而你又想在需要知道確切大小的情況下使用該型別的數值</li>
 <li>當你有個龐大的資料，而你想要轉移所有權並確保資料不會被拷貝。</li>
-<li>當你想要擁有某個值，但你只在意該型別有實作特定的特徵，而不再是何種特定型別</li>
+<li>當你想要擁有某個值，但你只在意該型別有實作特定的特徵，而不是何種特定型別</li>
 </ul>
 <p>我們會在<a href="#%E9%80%8F%E9%81%8E-box-%E5%BB%BA%E7%AB%8B%E9%81%9E%E8%BF%B4%E5%9E%8B%E5%88%A5">「透過 Box 建立遞迴型別」</a><!-- ignore -->段落解說第一種情形。而在第二種情形，轉移龐大的資料的所有權可能會很花費時間，因為在堆疊上的話會拷貝所有資料。要改善此情形，我們可以用 box 將龐大的資料儲存在堆積上。這樣就只有少量的指標資料在堆疊上被拷貝，而其引用的資料仍然保留在堆積上的同個位置。第三種情況被稱之為<strong>特徵物件（trait object）</strong>，第十七章會花整個<a href="ch17-02-trait-objects.html">「允許不同型別數值的特徵物件」</a><!-- ignore -->段落來討論此議題。所以你在此學到的到第十七章會再次用上！</p>
 <h3 id="使用-boxt-儲存資料到堆積上"><a class="header" href="#使用-boxt-儲存資料到堆積上">使用 <code>Box&lt;T&gt;</code> 儲存資料到堆積上</a></h3>
